# inke

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.txt  TODO.txt  notes.txt  run.bat  run.sh  test.bat  test.sh
include/: raygui.h
src/: CMakeLists.txt  buffer.c  buffer.h  cmdline.c  cmdline.h  cursor.c  cursor.h  definitions.h  ds.c  ds.h  ed_list.h  ed_stack.h  editor.c  editor.h  fs.c  fs.h  globals.c  globals.h  ifunc.c  ifunc.h  input.c  input.h  io.c  io.h  ireplace.c  ireplace.h  isearch.c  isearch.h  main.c  mode.c  mode.h  prompt.c  prompt.h  render.c  render.h  terminal.c  terminal.h  types.h  undo.c  undo.h  (+6 more)
tests/: CMakeLists.txt  ctest.h  cursor_test.c  editor_test.c  sample.txt  sample_test.c  undo_test.c
